--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "phonology-creator",
   "version": "0.1.0",
   "private": true,
+  "author": "Alexander Cai <alexandercai@outlook.com>",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,6 +17,7 @@
     "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0",
     "swr": "^0.5.6",
     "tailwindcss": "^2.1.2",
     "uuid": "^8.3.2"
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@types/passport-local": "^1.0.33",
     "@types/react": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
