--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "downlevelIteration": true
   },
-  "include": ["next-env.d.ts", ".eslintrc.js", "**/*.js", "**/*.ts", "**/*.jsx", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    ".eslintrc.js",
+    "**/*.js",
+    "**/*.ts",
+    "**/*.jsx",
+    "**/*.tsx"
+  ],
   "exclude": ["node_modules"]
 }
