--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "swr": "^0.5.6",
     "tailwindcss": "^2.1.2",
